Fix dark mode for hutan

--- a/src/css/games/hutan/darkStyle.less
+++ b/src/css/games/hutan/darkStyle.less
@@ -23,3 +23,24 @@
 #hutan-main-container #flower-cards-container {
 	background: var(--dark-back);
 }
+
+#info-panel {
+	background-color: var(--dark-10);
+}
+
+#info-panel #animals-reserves .animal-reserve-holder .animal-reserve {
+	filter: var(--drop-shadow);
+}
+
+#logs .log.notif_newTurn .roundedbox,
+.chatwindowlogs_zone .log.notif_newTurn.roundedbox {
+	background: var(--green-10);
+}
+
+#info-panel #player_config #help-mode-switch .label {
+	background-color: var(--light-50);
+}
+
+#info-panel #player_config #help-mode-switch .checkbox:checked+.label {
+	background-color: var(--blue-70);
+}
